# multioutreg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gh_pages.yml  python-tests.yml  streamlit-smoke.yml
Deploy/: Dockerfile-make-docs
docs/: Makefile  api.rst  conf.py  index.rst  install.md  references.rst  usage.md
docs/_static/example_datasets/: __lhs_example.csv  example_dataset_3_outputs.csv  foo.csv  foo.j2  foo.yaml  grid_3N.csv  lhs_sampled_dataset.csv  sample_data.csv
docs/example_reports/: output_from_example_generate_report.html  surrogate_report_example.html  umap_2d_sampling_plot.html
docs/tutorials/: data.csv  forecasting_with_chronos.md
examples/: AutoDetectMultiOutputRegressor.ipynb  chronos_forecast_airpassengers.py  compare_gp_vs_rf.py  confidence_plots.ipynb  coverage_plots.ipynb  generate_report.py  gp_vs_lgb_quantile_fixed.py  grid_search_cv_example.ipynb  hetero_ensemble.ipynb  make_plots.py  metric_plot_demo.ipynb  model_comparison_plots.ipynb  multioutput_with_grid_searched_base_estimators.ipynb  multiplot.ipynb  other.ipynb  performance_metrics_plotting.ipynb  pred_vs_truth_plots.ipynb  prediction_plots.ipynb  report.ipynb  res.ipynb  shap_multioutput.ipynb  test_functionality.py  umap_sampling_inference.ipynb  uq_metrics_demo.ipynb
mor_cli/: __init__.py  detect_sampling.py  example.py  grid_search.py  grid_search_auto_detect.py  infer_sampling.py  print_fonts.py  ts_forecast.py  use_ks_for_sample_bias.py
multioutreg/: __init__.py
multioutreg/figures/: README.md  confidence_intervals.py  coverage_plots.py  doe_plots.py  error_histograms.py  model_comparison.py  pca_plots.py  pdp_plots.py  performance_metric_figures.py  prediction_plots.py  residuals.py  shap_multioutput.py  uct_calibration_extension.py  umap_plot_classify.py  uncertainty_toolbox_extension.py
multioutreg/gui/: Grid_Search_Surrogate_Models.py  report_plotting_utils.py
multioutreg/gui/pages/: 01_Use_Auto_Detect_MultiOutput_Regressor.py  03_Sample_Bias_Alert.py  04_Sampling_and_Bias_Dashboard.py  05_PCA_Sampling_Datasets_Examples.py  05_Sampling_Datasets_Examples.py  05_Time_Series_Forecasting.py  07_Other_Dataset_Examples.py  Detect_Sampling.py  PCA_Sample_detection.py  Use_Auto_Detect_MultiOutput_Regressor.py  lhs_detector_app.py  sample_infer.py  sample_infer_dashboard.py
multioutreg/metrics/: README.md  __init__.py  multiobjective_regret.py
multioutreg/model_selection/: __init__.py  auto_detect.py  model_wrappers.py
multioutreg/performance/: README.md  metric_plot_demo.ipynb  metrics.py  metrics_generalized_api.py
multioutreg/report/: generate_report.py  generate_report1.py  generate_report1_safe.py  report_template.html  template.html  template.py
multioutreg/sampling/: __init__.py  classify_sampling.py  infer_sampling.py  pca_sampling_detector.py
multioutreg/surrogates/: __init__.py  base_sklearn.py  decision_tree_sklearn.py  gp_sklearn.py  gradient_boosting_sklearn.py  knn_sklearn.py  linear_sklearn.py  multi_fidelity.py  rf_sklearn.py  svr_sklearn.py
multioutreg/time_series/: __init__.py  chronos_adapter.py  metrics.py
multioutreg/timeseries/: __init__.py  forecasting.py
multioutreg/utils/: aux_funcs.py  figure_utils.py  metric_utils.py  surrogate_utils.py
tests/integration/: test_cli.py  test_cli_detect_sampling.py  test_cli_sampling.py  test_make_plots.py
tests/unit/: test_aux_funcs.py  test_metric_utils.py  test_metrics.py  test_metrics_generalized.py  test_plot_predictions.py
tests/unit/figures/: test_confidence_intervals.py  test_coverage_plots.py  test_doe_plots.py  test_error_histograms.py  test_figure_utils.py  test_model_comparison.py  test_pca_plots.py  test_pdp_plots.py  (+7 more)
(+31 files in other folders)
