[project]
name = "multioutreg"
version = "0.0.1"
description = "Multi-Output Regressors"
readme = "README.md"
requires-python = ">=3.8"
# authors = [
#     {name = "takotime808", email = "takotime808"},
# ]
license = {file = "LICENSE"}

dependencies = [
  "typer-cli", # 0.12.0
  "wasabi",
  "termcolor",
  "pyfiglet",
  "terminology",
  "numpy>=1.22,<2.0",
  "pandas>=1.5,<2.2",
  "matplotlib>=3.5,<4.0",
  "scikit-learn>=1.2,<1.5",
  "seaborn>=0.11.2,<=0.13.2",
  "uncertainty-toolbox",#>=0.1.4,<0.1.7",
  "shap>=0.48.0",
  # "jinja2>=3.0",
  "umap-learn",
  "kaleido",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = [".", "mor_cli", "multioutreg"]
namespaces = false

[project.scripts]
multioutreg = "mor_cli:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/Deploy/*",
    "*/docs/*",
    "*/examples/*",
    "*/tests/*",        # Excludes any files within "tests" directories
]
[tool.coverage.report]
exclude_lines = [
    'except Exception:',
    'pass',
    'plt.show()',
    # "except Exception:",
    # "plt\\.show\\(\\)",
]

# [tool.pytest.ini_options]
# addopts = "-v"  # Run tests in verbose mode
# testpaths = [
#     "tests"
# ]
